2015-07-31 08:09 baty
	* Updated citation for the nlstools package

2015-02-26 09:50 baty
	* version 1.0-1
	* The new function 'confint2' (originally implemented in the deprecated package 'nlrwr') was added to the 'nlstools'
	* The new dataset 'L.minor' (originated from the deprecated package 'nlwrw') was added to 'nlstools'

2014-05-12 16:15 baty
  	* version 1.0-0
	* Most formulas and data sets related to predictive microbiology (as well as the associated vignette) have been moved to the separate package 'nlsMicrobio'

2013-09-30 17:07 baty
	* version 0.0-15
	* O2K.rda: new dataset about oxygen kinetics in 6-minute walk test
	
2012-12-10 14:57 baty
	* version 0.0-14
	
2012-11-30 11:23 baty
	* version 0.0-13
	* fix .First.lib call issue by removing unnecessary First.lib.R

2012-04-20 16:49 baty
	* version 0.0-12
	* plotfit function was modified in order to avoid that different independent variables are used in the plot and points statement (thanks to the help of Wolfgang Kraus)
	* plot.nlsContourRSS was updated with an extra argument useRaster (= TRUE by default) so that a bitmap raster is used in the image displaying the contours
	
2011-02-11 08:47 baty
    * version 0.0-11
    * update contact information
    * plotfit: the first independent variable is selected by default for the representation (x-axis)

2010-01-08 11:22 Delignette-Muller
    * version 0.0-10
    * competitionmodels.R and competitionmodels.Rd: add of models
    * competitioncurve : add of data for these models
    * nlstools_vignette  : minor correction

2009-08-22 17:39 baty
    * version 0.0-9
    * nlsBoot: the 95% CI was not supplied correctly (bug fixed, reported by Andrej-Nikolai Spiess)
    * nlsContourRSS: new argument 'col.pal' which is used to define the palette of colors used in the background of the plot (suggestion by Dieter Menne).

2009-02-19 15:53 baty
    * version 0.0-8
    * nlsResiduals.R: re-organization of the plots
    * michaelismodels.R, michaelismodels.Rd