@@ -1,3 +1,6 @@
+2024-02-12 11:09 baty
+	* nlsJack and nlsBoot have been updated in order to handle predictors including categorical variables
+
 2015-07-31 08:09 baty
 	* Updated citation for the nlstools package
 
